--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "proxy-server",
+  "name": "gsheet-proxy",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "axios": "^1.6.7",
     "express": "^4.18.2",
